--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "seungmin",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.8.3"
+  },
+  "devDependencies": {
+    "nodeman": "^1.1.2"
   }
 }
