--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "backend":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "seungmin",
@@ -15,6 +16,7 @@
     "mongoose": "^6.8.3"
   },
   "devDependencies": {
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "nodemon": "^2.0.20"
   }
 }
